# eld

./: .buildinfo  .gitignore  About.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  repolint.json  search.html  searchindex.js
docs/userguide/api_docs/: CMakeLists.txt  Doxyfile.in
include/eld/: CMakeLists.txt
include/eld/BranchIsland/: BranchIsland.h  BranchIslandFactory.h  StubFactory.h
include/eld/Config/: Config.h.cmake  GeneralOptions.h  LinkerConfig.h  Linkers.def.cmake  Linkers.def.in  TargetOptions.h  Targets.def.cmake  Targets.def.in  Version.h  Version.inc.in
include/eld/Core/: CommandLine.h  Linker.h  LinkerScript.h  Module.h
include/eld/Diagnostics/: DiagAttribute.inc  DiagBackends.inc  DiagCommonKinds.inc  DiagGOTPLT.inc  DiagLDScript.inc  DiagLTO.inc  DiagLayouts.inc  DiagPlugin.inc  DiagReaders.inc  DiagRelocations.inc  DiagStats.inc  DiagSymbolResolutions.inc  DiagTraceAssignments.inc  DiagTraceFiles.inc  DiagTraceGC.inc  DiagTraceSymbols.inc  DiagTraceTrampolines.inc  DiagVerbose.inc  DiagWriters.inc  Diagnostic.h  DiagnosticEngine.h  DiagnosticInfos.h  DiagnosticPrinter.h  MsgHandler.h  PluginDiags.inc
include/eld/Driver/: ARMLinkDriver.h  ARMLinkerOptions.td  CMakeLists.txt  Driver.h  Flavor.h  GnuLdDriver.h  GnuLinkerOptions.td  HexagonLinkDriver.h  HexagonLinkerOptions.td  RISCVLinkDriver.h  RISCVLinkerOptions.td  x86_64LinkDriver.h  x86_64LinkerOptions.td
include/eld/Fragment/: BuildIDFragment.h  EhFrameFragment.h  EhFrameHdrFragment.h  FillFragment.h  FragUtils.h  Fragment.h  FragmentRef.h  GNUHashFragment.h  GOT.h  MergeStringFragment.h  OutputSectDataFragment.h  PLT.h  RegionFragment.h  RegionFragmentEx.h  RegionTableFragment.h  StringFragment.h  (+4 more)
lib/: CMakeLists.txt
lib/BranchIsland/: BranchIsland.cpp  BranchIslandFactory.cpp  CMakeLists.txt  StubFactory.cpp
lib/Config/: CMakeLists.txt  GeneralOptions.cpp  LinkerConfig.cpp  TargetOptions.cpp  Version.cpp
lib/Core/: CMakeLists.txt  Linker.cpp  LinkerScript.cpp  Module.cpp
lib/Diagnostics/: CMakeLists.txt  Diagnostic.cpp  DiagnosticEngine.cpp  DiagnosticInfos.cpp  DiagnosticPrinter.cpp  MsgHandler.cpp
lib/Fragment/: BuildIDFragment.cpp  CMakeLists.txt  EhFrameFragment.cpp  EhFrameHdrFragment.cpp  FillFragment.cpp  FragUtils.cpp  Fragment.cpp  FragmentRef.cpp  GNUHashFragment.cpp  GOT.cpp  MergeStringFragment.cpp  OutputSectDataFragment.cpp  PLT.cpp  RegionFragment.cpp  RegionFragmentEx.cpp  RegionTableFragment.cpp  StringFragment.cpp  Stub.cpp  SysVHashFragment.cpp  TargetFragment.cpp  TimingFragment.cpp
lib/GarbageCollection/: CMakeLists.txt  GarbageCollection.cpp
lib/Input/: ArchiveFile.cpp  ArchiveMemberInput.cpp  BinaryFile.cpp  BitcodeFile.cpp  CMakeLists.txt  ELDDirectory.cpp  ELFDynObjectFile.cpp  ELFExecutableFile.cpp  ELFFileBase.cpp  ELFObjectFile.cpp  Input.cpp  InputAction.cpp  InputBuilder.cpp  InputFile.cpp  JustSymbolsAction.cpp  LinkerScriptFile.cpp  ObjectFile.cpp  SearchDirs.cpp  SymDefFile.cpp
lib/LayoutMap/: CMakeLists.txt  LDYAML.cpp  LayoutInfo.cpp  LayoutPrinter.cpp  TextLayoutPrinter.cpp  YamlLayoutPrinter.cpp
lib/LinkerWrapper/: ARMLinkDriver.cpp  CMakeLists.txt  DWARF.cpp  DiagnosticBuilder.cpp  DiagnosticEntry.cpp  Diagnostics.cpp  Driver.cpp  GnuLdDriver.cpp  HexagonLinkDriver.cpp  LW.exports  LayoutADT.cpp  LayoutWrapper.cpp  LinkerPlugin.cpp  LinkerPluginConfig.cpp  LinkerScript.cpp  LinkerWrapper.cpp  PluginADT.cpp  RISCVLinkDriver.cpp  SmallJSON.cpp  TarWriter.cpp  ThreadPool.cpp  x86_64LinkDriver.cpp
lib/Object/: CMakeLists.txt  GroupReader.cpp  ObjectBuilder.cpp  ObjectLinker.cpp  OutputSectionEntry.cpp  RuleContainer.cpp  ScriptMemoryRegion.cpp  SectionMap.cpp
lib/Plugin/: CMakeLists.txt  PluginData.cpp  PluginManager.cpp  PluginOp.cpp
lib/Readers/: ArchiveParser.cpp  BinaryFileParser.cpp  BitcodeReader.cpp  CMakeLists.txt  DynamicELFReader.cpp  ELFDynObjParser.cpp  ELFExecObjParser.cpp  ELFReader.cpp  ELFReaderBase.cpp  ELFRelocObjParser.cpp  ELFSection.cpp  EhFrameHdrSection.cpp  EhFrameSection.cpp  ExecELFReader.cpp  RelocELFReader.cpp  Relocation.cpp  Section.cpp  SymDefReader.cpp  TimingSection.cpp  TimingSlice.cpp
lib/Script/: Assignment.cpp  CMakeLists.txt  EnterScopeCmd.cpp  EntryCmd.cpp  ExcludeFiles.cpp  ExitScopeCmd.cpp  Expression.cpp  ExternCmd.cpp  FileToken.cpp  GroupCmd.cpp  IncludeCmd.cpp  InputCmd.cpp  InputSectDesc.cpp  InputToken.cpp  MemoryCmd.cpp  MemoryDesc.cpp  NameSpec.cpp  NoCrossRefsCmd.cpp  OutputArchCmd.cpp  OutputCmd.cpp  OutputFormatCmd.cpp  OutputSectData.cpp  OutputSectDesc.cpp  PhdrDesc.cpp  PhdrsCmd.cpp  Plugin.cpp  PluginCmd.cpp  PluginConfig.cpp  RegionAlias.cpp  ScriptAction.cpp  ScriptCommand.cpp  ScriptFile.cpp  ScriptReader.cpp  ScriptSymbol.cpp  SearchDirCmd.cpp  SectionsCmd.cpp  StrToken.cpp  StringList.cpp  SymbolContainer.cpp  VersionScript.cpp  (+1 more)
lib/ScriptParser/: CMakeLists.txt  ScriptLexer.cpp  ScriptParser.cpp
lib/Support/: CMakeLists.txt  DynamicLibrary.cpp  FileSystem.cpp  HashUtils.cpp  INIReader.cpp  MappingFile.cpp  Memory.cpp  MemoryArea.cpp  OutputTarWriter.cpp  Path.cpp  RegisterTimer.cpp  StringRefUtils.cpp  StringUtils.cpp  Target.cpp  TargetRegistry.cpp  Utils.cpp
lib/SymbolResolver/: CMakeLists.txt  IRBuilder.cpp  LDSymbol.cpp  NamePool.cpp  ResolveInfo.cpp  Resolver.cpp  StaticResolver.cpp  SymbolInfo.cpp  SymbolResolutionInfo.cpp
lib/Writers/: CMakeLists.txt  ELFObjectWriter.cpp  SymDefWriter.cpp
test/: CMakeLists.txt  README_IMPORTANT.TXT  eld_test_formats.py  lit.cfg  lit.site.cfg.in  thin_archive_test_format.py
test/AArch64/: lit.local.cfg  sample.test
test/ARM/: lit.local.cfg  sample.test
test/Common/: CMakeLists.txt
test/Hexagon/: CMakeLists.txt  lit.local.cfg
test/RISCV/: lit.local.cfg
test/Templates/: ExampleOfMyLitTest.test
test/UnitTests/: CMakeLists.txt  IMPORTANT_README.txt  lit.cfg  lit.site.cfg.in
test/x86_64/: lit.local.cfg
tools/LSParserVerifier/: CMakeLists.txt  LSParserVerifier.cpp
tools/eld/: CMakeLists.txt  eld.cpp  eld_install.cmake.in  ld_eld_symlink.cmake
(+4549 files in other folders)
