add_subdirectory(BranchIsland)
add_subdirectory(Config)
add_subdirectory(Core)
add_subdirectory(Diagnostics)
add_subdirectory(Fragment)
add_subdirectory(GarbageCollection)
add_subdirectory(Input)
add_subdirectory(LayoutMap)
add_subdirectory(LinkerWrapper)
add_subdirectory(ScriptParser)
add_subdirectory(Object)
add_subdirectory(Plugin)
add_subdirectory(Readers)
add_subdirectory(Script)
add_subdirectory(Support)
add_subdirectory(SymbolResolver)
add_subdirectory(Target)
add_subdirectory(Writers)
