add_custom_target(CommonPluginUnitTests)
set_target_properties(CommonPluginUnitTests PROPERTIES FOLDER
                                                       "plugin unit tests")

function(add_common_plugin pluginname)
  add_dependencies(CommonPluginUnitTests ${pluginname})
endfunction()

add_subdirectory(ActBeforeRuleMatching)
add_subdirectory(ActBeforeSectionMerging)
add_subdirectory(AddedSectionOverrides)
add_subdirectory(BasicChunkMover)
add_subdirectory(BasicLinkerScriptGenerator)
add_subdirectory(ChangeSection)
add_subdirectory(ChunkMovesInInvalidLinkStates)
add_subdirectory(DiscardedSections)
add_subdirectory(DWARFInfo)
add_subdirectory(FindConfigFile)
add_subdirectory(GetLinkerVersion)
add_subdirectory(GetEnv)
add_subdirectory(GetUses)
add_subdirectory(GetUsesSymbols)
add_subdirectory(INIFile)
add_subdirectory(InputFiles)
add_subdirectory(InvalidDiagnostics)
add_subdirectory(IterateSectionsWithGC)
add_subdirectory(LayoutWrapperTests)
add_subdirectory(LinkMode)
add_subdirectory(LinkerPluginVersion)
add_subdirectory(MatchIslandSections)
add_subdirectory(MatchIslandSectionsAndGetSymbolsDefinedInSection)
add_subdirectory(MissingINIFile)
add_subdirectory(MultithreadedDiagnostics)
add_subdirectory(NoSectionOverrides)
add_subdirectory(NullFileSize)
add_subdirectory(OrderChunks)
add_subdirectory(OutputChunkIterator)
add_subdirectory(OutputChunkIteratorMoveBetweenSections)
add_subdirectory(OutputChunkIteratorSymbols)
add_subdirectory(OutputSectionAddRules)
add_subdirectory(OutputSectionsBeforePerformingLayout)
# add_subdirectory(OutputSectionIterator)
add_subdirectory(PartialPendingSectionOverrides)
add_subdirectory(PendingAndNoSectionOverrides)
add_subdirectory(PendingRuleInsertions)
add_subdirectory(PendingSectionOverrides)
add_subdirectory(PluginDiagnostics)
add_subdirectory(ActBeforePerformingLayout)
add_subdirectory(ActBeforeWritingOutput)
add_subdirectory(AddChunkToOutputInCreatingSections)
add_subdirectory(AuxiliarySymbolName)
add_subdirectory(AuxiliarySymbolNameTrace)
add_subdirectory(DoesRuleMatchWithSection)
add_subdirectory(PluginCommandLineOptions)
add_subdirectory(PluginCommandLineOptionsErrors)
add_subdirectory(RemoveChunks)
add_subdirectory(ReproduceOnCrash)
add_subdirectory(RMSectNameInDiag)
add_subdirectory(RuleMatchingSectNameMap)
add_subdirectory(RuleMatchingSectNameMapErrors)
add_subdirectory(SearchDiagnosticsPlugin)
add_subdirectory(SectionTypes)
add_subdirectory(TarWriterTests)
add_subdirectory(TimingReport)
add_subdirectory(UnbalancedChunkMoves)
add_subdirectory(UniversalPluginInitAndDestroy)
add_subdirectory(UniversalPluginInitError)
add_subdirectory(UniversalPluginTextMapFile)
add_subdirectory(UsingBothUPAndNonUP)
add_subdirectory(VerboseDiagnostics)
add_subdirectory(VerifyChunkMoves)
add_subdirectory(VirtualAddress)
add_subdirectory(UPVisitSections)
add_subdirectory(VisitSymbolHook)
add_common_plugin(PluginSymbols)
