add_custom_target(PluginUnitTests)
set_target_properties(PluginUnitTests PROPERTIES FOLDER "plugin unit tests")

function(add_plugin pluginname)
  add_dependencies(PluginUnitTests ${pluginname})
endfunction()

add_subdirectory(AllOutSectAddresses)
add_subdirectory(ChangeSymbol)
add_subdirectory(ConfigFile)
add_subdirectory(CreateChunk)
add_subdirectory(DiscardSections)
add_subdirectory(ExcludeSymbol)
add_subdirectory(FileSize)
add_subdirectory(FindAllUsesHelloWorld)
add_subdirectory(GetAllSymbols)
# add_subdirectory(GetSectionNameForSymbols)
add_subdirectory(IterateOverDiscardedSections)
add_subdirectory(LayoutWrapperTest)
add_subdirectory(MatchAndDiscardSections)
add_subdirectory(MatchSectionsAndGetRawData)
add_subdirectory(MergeStringChunk)
add_subdirectory(MoveChunksFromOutputSection)
add_subdirectory(MoveChunksFromOutputSectionForTrampolines)
add_subdirectory(OutputSectionContents)
add_subdirectory(OutputSectionIteratorWithConfig)
add_subdirectory(SegmentInfo)
add_subdirectory(StringChunkMover)
add_subdirectory(TargetChunkOffset)
add_subdirectory(TrampolineInfo)
add_subdirectory(UpdateRelocationTargetData)
